2007-06-15  Andreas Kirschbaum

	* Use all available space in text window.

	* Accelerate text window output.

	* Suppress unnecessary redraws of gauges for unchanged values.

2007-06-14  Andreas Kirschbaum

	* Make bind and unbind commands work.

	* Make default key bindings work on any keyboard layout.

	* Key bindings file format changed to text format; the filename
	is now "keybindings.txt".

2007-06-12  Andreas Kirschbaum

	* Sort entries in metaserver list by hostname.

	* Disable start screen since only one option is implemented.

2007-06-10  Andreas Kirschbaum

	* Reduce CPU load.

2007-06-09  Andreas Kirschbaum

	* Accelerate map drawing; remove dependency to sixlegs png
	library.