@@ -1,5 +1,8 @@
 2007-06-15  Andreas Kirschbaum
 
+	* Increase text window size to make 'maps output fit without
+	wrapping.
+
 	* Use all available space in text window.
 
 	* Accelerate text window output.
